--- a/examapp/templates/course.html
+++ b/examapp/templates/course.html
@@ -15,7 +15,8 @@
 
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static 'examapp/css/adminonline.css' %}">
+    <link rel="stylesheet" href="{% static 'examapp/css/onlineadmin.css' %}">
+
     <style>
         .btn-none {
             background: none;
@@ -49,9 +50,6 @@
             animation: slideFade 0.5s ease-in-out;
             margin-top: 30px;
         }
-
-
-
 
         h3 {
             color: #0d6efd;
@@ -135,7 +133,6 @@
             margin-bottom: 0.25rem;
         }
 
-
         input[type="text"],
         input[type="email"],
         input[type="password"],
@@ -148,6 +145,7 @@
             border: 1px solid #ced4da;
         }
     </style>
+
 </head>
 
 <body>
@@ -305,10 +303,7 @@
                 </table>
             </div>
             {% endif %}
-
-
         </div>
-
     </div>
 
     <!-- Bootstrap Bundle JS -->
